--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>The-loop</title>
 
+	<link rel="preload" href="css/style.min.css" as="style">
+	<link rel="preload" href="js/main.min.js" as="script">
+	
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
